Nova versão do projeto com correções

--- a/bioestetica-site/index.html
+++ b/bioestetica-site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" style="height: 100%;">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,8 +10,9 @@
     />
     <link rel="stylesheet" href="/src/index.css" />
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <body style="height: 100%; margin: 0;">
+    <div id="root" style="min-height: 100vh; display: flex; flex-direction: column;">
+      <script type="module" src="/src/main.jsx"></script>
+    </div>
   </body>
 </html>
