--- a/bioestetica-site/index.html
+++ b/bioestetica-site/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clínica Corpo e Pele - Josiane Sousa</title>
+    <link rel="icon" type="image/png" href="/images/logo-removebg.png" />
+    <link rel="apple-touch-icon" href="/images/logo-removebg.png" />
+    <meta name="theme-color" content="#bfa07a" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Playfair+Display:wght@700&display=swap"
